--- a/main.css
+++ b/main.css
@@ -9,3 +9,47 @@ body {
   margin: 0 auto;
   padding: 0 10px;
 }
+
+body {
+
+}
+
+
+/* INSERT ALL YOUR HADER SYLINGS HERE */
+.header {
+
+}
+
+/* HEADER STYLING ENDS HERE. ALL YOUR HADER SYLINGS SHOULD BE BETWEEN */
+
+
+/* INSERT SECTIONS IN MAIN */
+.main {
+
+}
+
+/* ROOMS STYLING GOES HERE */
+
+.section-rooms {
+    
+}
+/* FACILITIES STYLING GOES HERE */
+
+.section-facilities {
+
+}
+/* CTA STYLING GOES HERE */
+
+.section-cta {
+
+}
+/* FOOTER STYLING GOES HERE */
+
+.footer {
+
+}
+
+
+
+
+
