--- a/main.css
+++ b/main.css
@@ -1,55 +1,233 @@
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 2em;
+  color: #2c2c2c;
+  font-size: 1.6rem;
 }
 
 .container {
   width: 1366px;
   max-width: calc(100% - 20px);
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 1rem;
 }
 
-body {
+/* Header */
 
-}
-
-
-/* INSERT ALL YOUR HADER SYLINGS HERE */
 .header {
-
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  opacity: 0.7;
 }
 
-/* HEADER STYLING ENDS HERE. ALL YOUR HADER SYLINGS SHOULD BE BETWEEN */
-
-
-/* INSERT SECTIONS IN MAIN */
-.main {
-
+.header p {
+  margin: 10px;
 }
 
-/* ROOMS STYLING GOES HERE */
-
-.section-rooms {
-    
-}
-/* FACILITIES STYLING GOES HERE */
-
-.section-facilities {
-
-}
-/* CTA STYLING GOES HERE */
-
-.section-cta {
-
-}
-/* FOOTER STYLING GOES HERE */
-
-.footer {
-
+.right {
+  display: flex;
+  justify-content: space-between;
 }
 
+.right img {
+  width: 2rem;
+}
+
+/* Header Ends Here */
 
 
+/* Facilities section */
+.facilities {
+  margin: 5rem auto;
+}
+
+.heading {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+  color: rgb(65, 62, 62);
+}
+
+.paragraph {
+  color: rgb(78, 77, 77);
+  text-align: center;
+}
+
+.facility_name {
+  color: black;
+  margin: 10px 0;
+}
+
+.facilities_list ul {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+}
+
+.facilities-image {
+  width: 100%;
+}
+
+.facilities_list ul li {
+  width: 400px;
+  margin: 15px 5px;
+  text-align: center;
+}
+
+.facility_name {
+  font-weight: 550;
+  color: rgb(65, 62, 62);
+}
+
+.facility_desc {
+  margin: 5px 0;
+  color: rgb(78, 77, 77);
+  font-weight: 500;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+
+.btn {
+  margin: 0 auto;
+  font-weight: 600;
+  font-size: 2rem;
+  text-align: center;
+  border: none;
+  outline: none;
+  border-radius: 3px;
+  transition: all .3s;
+  font-weight: bold;
+}
+
+.btn_small {
+  padding: 10px 30px;
+  display: inline-block;
+  margin-top: 15px;
+  height: 55px;
+  width: 10%;
+}
+.btn_large {
+  height: 8rem;
+  width: 36rem;
+}
+.btn--primary {
+  background: #D66439;
+  color: #2c2c2c;
+}
+.btn--secondary {
+  color: #d66939;
+  background-color: #fff;
+}
+
+.btn--primary:hover {
+  cursor: pointer;
+  transform: scaleY(1.1);
+}
+.btn--secondary:hover {
+  background-color: transparent;
+  color: #ffffff;
+  border: 3px solid white;
+}
+
+@media screen and (max-width:600px) {
+  .facilities_list ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  .facilities_list ul li {
+    width: 30rem;
+    text-align: center;
+  }
+  .facilities {
+    width: 30rem;
+    margin: auto;
+    text-align: center;
+  }
+
+  .browse-button {
+    width: 17rem;
+    height: 10rem;
+  }
+  .facilities-image {
+    width: 100%;
+  }
+}
+
+/* End of facilities section */
 
 
+/* contact us section */
+.form_wrapper {
+  background-color: #d66939;
+  padding: 5rem 2rem;
+}
+
+.form_wrapper h2 {
+  font-weight: 600;
+  font-size: 3.5rem;
+  color: #fff;
+  margin: 3rem 0;
+}
+
+.form-control:first-child {
+  margin-bottom: 4rem;
+}
+
+.form input {
+  width: 40%;
+  padding: 4px 20px;
+  height: 60px;
+  border: #f5f5f5 5px solid;
+  background: none;
+  border: 3px solid #ffffff;
+  color: #fff;
+  outline: none;
+}
+
+.form input::placeholder {
+  color: #fff;
+  transition: all .3s;
+}
+
+.form input:focus {
+  outline-color: none;
+}
+
+@media (max-width: 500px) {
+  .callbackForm .formControl {
+    display: block;
+  }
+  .callback-form input {
+    width: 80%;
+  }
+  .contact {
+    padding: 20px 20px 20px 20px;
+  }
+  .contact h3 {
+    font-size: 30px;
+  }
+  .btn {
+    width: 37%;
+  }
+}
