--- a/main.css
+++ b/main.css
@@ -125,7 +125,7 @@ body {
   display: inline-block;
   margin-top: 15px;
   height: 55px;
-  width: 10%;
+  width: 20rem;
 }
 .btn_large {
   height: 8rem;
@@ -180,8 +180,9 @@ body {
 /* contact us section */
 .form_wrapper {
   background-color: #d66939;
-  padding: 5rem 2rem;
+  padding: 5rem;
 }
+
 
 .form_wrapper h2 {
   font-weight: 600;
@@ -194,8 +195,8 @@ body {
   margin-bottom: 4rem;
 }
 
-.form input {
-  width: 40%;
+.input {
+  width: 40rem;
   padding: 4px 20px;
   height: 60px;
   border: #f5f5f5 5px solid;
@@ -205,29 +206,19 @@ body {
   outline: none;
 }
 
-.form input::placeholder {
+.input::placeholder {
   color: #fff;
-  transition: all .3s;
 }
 
-.form input:focus {
+.input:focus {
   outline-color: none;
 }
 
 @media (max-width: 500px) {
-  .callbackForm .formControl {
-    display: block;
+  .form_wrapper {
+    padding: 5rem 2rem;
   }
-  .callback-form input {
-    width: 80%;
-  }
-  .contact {
-    padding: 20px 20px 20px 20px;
-  }
-  .contact h3 {
-    font-size: 30px;
-  }
-  .btn {
-    width: 37%;
+  .form input {
+    width: 30rem;
   }
 }
